login page, view classrooms page (incomplete), room page (incomplete)

--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -1,5 +1,6 @@
+<div class="container">
 <br>
-
+<br><br><br>
 <div class="play-container0">
 	<h2 id="home">Centralized Education Platform to </h2><h2>Share Knowledge and Grow Together</h2>
 	<h4><i>Insert text here</i></h4>
@@ -102,6 +103,7 @@
 		<button class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Subscribe</button>
 
 	</div>
+</div>
 </div>
 
 <!-- <div class="play-container">
