--- a/Frontend/eduka-interface/src/app/login/login.component.html
+++ b/Frontend/eduka-interface/src/app/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="container">
+	<div class="login-container">
+		<h1>Login</h1>
+		<div class="row">	
+			<div class="input-field col s6 m4 l4">
+				<input type="email" name="email" placeholder="Email">
+			</div>
+		</div>
+		<div class="row">	
+			<div class="input-field col s6 m4 l4">
+				<input type="password" name="password" placeholder="Password">
+			</div>
+		</div>
+		<div class="row">
+			<button class="btn-large waves-effect eduka-pink" type="submit" name="signIn">Sign In</button>
+		</div>	
+	</div>
+</div>
