added new components, signup page changes to home page, login page, etc.

--- a/Frontend/eduka-interface/src/app/app.component.html
+++ b/Frontend/eduka-interface/src/app/app.component.html
@@ -5,9 +5,9 @@
       <li> <a href="#home">Home</a></li>
       <li> <a href="#about">About</a></li>
       <li> <a href="#features">Features</a></li>
-      <li> <a href="#" routerLink = "/login">Login</a></li>
+      <li> <a class="eduka-pink" href="#" routerLink = "/login">&nbsp;&nbsp;<b>Login</b>&nbsp;&nbsp;</a></li>
     </ul>
   </div>
 </nav>
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
