--- a/Frontend/eduka-interface/src/app/classrooms/classrooms.component.html
+++ b/Frontend/eduka-interface/src/app/classrooms/classrooms.component.html
@@ -19,7 +19,7 @@
 	<div class="center-align">
 		<button class="btn-large join-room" onclick=""><b>Join Room</b></button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<button class="btn-large create-room" onclick=""><b>Create Room</b></button>
+		<button class="btn-large create-room" [routerLink]="['/createroom']"><b>Create Room</b></button>
 	</div>
 	<br><br><br>
 </div>
