--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -5,24 +5,23 @@
 	<h2 id="home">Centralized Education Platform to </h2><h2>Share Knowledge and Grow Together</h2>
 	<h4><i>Insert text here</i></h4>
 
-	<div class="row">
+<!-- 	<div class="row">
 		<form class="col s12 m12 l12">
 			<div class="row">
 				<div class="input-field col s6 m4 l4">
-					<input type="email" name="newEmail" placeholder="Email">
+					<input type="email" [(ngModel)]="newEmail" placeholder="Email">
 				</div>
 			</div>
 			<div class="row">
 				<div class="input-field col s6 m4 l4">
-					<input type="password" name="newPassword" placeholder="Password">
+					<input type="password" [(ngModel)]="newPassword" placeholder="Password">
 				</div>
 			</div>
 			<div class="row">
-				<button class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Sign Up</button>
+				<button (click)="signUp()" class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Sign Up</button>
 			</div>		
-	<!--   <input type="submit" name="signUp" value="Sign Up" style="background-color: #fe47aa">
-	 --></form>
-	</div>
+		</form>
+	</div> -->
 </div>
 
 <div class="play-container">
