--- a/Frontend/eduka-interface/src/app/login/login.component.html
+++ b/Frontend/eduka-interface/src/app/login/login.component.html
@@ -12,7 +12,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<button class="btn-large waves-effect eduka-pink" type="submit" name="signIn">Sign In</button>
+			<button class="btn-large waves-effect eduka-pink" type="submit" name="signIn">Login</button>
 		</div>	
+		<h6>Don't have an account? </h6><h6><a [routerLink]="['/signup']"> <u>Sign up here</u> </a></h6>
 	</div>
 </div>
