--- a/Frontend/eduka-interface/src/app/room/room.component.html
+++ b/Frontend/eduka-interface/src/app/room/room.component.html
@@ -15,3 +15,12 @@
 		</div>
 	</div>
 </div>
+<div class="bottom-section">
+	<div class="channel-list">
+		<!-- ngFor (loop through channel list in room)	-->
+		<button># General</button>
+		<button># Announcements</button>
+	</div>
+	<div class="chat-box">
+	</div>
+</div>
