--- a/Frontend/eduka-interface/src/app/app.component.scss
+++ b/Frontend/eduka-interface/src/app/app.component.scss
@@ -13,3 +13,11 @@ nav {
 		}
 	}
 }
+
+.eduka-pink	{
+	background-color: #fe47aa;
+	border-style: solid;
+	border-color: black;
+	border-width: 2px;
+	margin-top: -1px;
+}
