fix homepage design

--- a/Frontend/eduka-interface/src/app/app.component.html
+++ b/Frontend/eduka-interface/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
   <div class="nav-wrapper">
     <a href="#" class="brand-logo" routerLink="/">&nbsp; EDUKA</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -8,6 +8,6 @@
       <li> <a class="eduka-pink" href="#" routerLink = "/login">&nbsp;&nbsp;<b>Login</b>&nbsp;&nbsp;</a></li>
     </ul>
   </div>
-</nav>
+</nav> -->
 
 <router-outlet></router-outlet>
