--- a/Frontend/eduka-interface/src/app/app.component.scss
+++ b/Frontend/eduka-interface/src/app/app.component.scss
@@ -1,23 +1,23 @@
-nav {
-	background-color: #e7eeff;
-	position: fixed;
-	a {
-		color: black;
-	 }
-	ul {
-		li {
-			a {
-				color: black;
-				font-size: 1.2em;	
-			}
-		}
-	}
-}
+// nav {
+// 	background-color: #e7eeff;
+// 	position: fixed;
+// 	a {
+// 		color: black;
+// 	 }
+// 	ul {
+// 		li {
+// 			a {
+// 				color: black;
+// 				font-size: 1.2em;	
+// 			}
+// 		}
+// 	}
+// }
 
-.eduka-pink	{
-	background-color: #fe47aa;
-	border-style: solid;
-	border-color: black;
-	border-width: 2px;
-	margin-top: -1px;
-}
+// .eduka-pink	{
+// 	background-color: #fe47aa;
+// 	border-style: solid;
+// 	border-color: black;
+// 	border-width: 2px;
+// 	margin-top: -1px;
+// }
