--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -1,138 +1,152 @@
-<div class="container">
-<br>
-<br><br><br>
-<div class="play-container0">
-	<h2 id="home">Centralized Education Platform to </h2><h2>Share Knowledge and Grow Together</h2>
-	<h4><i>Insert text here</i></h4>
+<!-- Header -->
+<header id="header">
+	<div class="inner">
+		<a href="#" class="logo" routerLink="/">Educom</a>
+		<nav id="nav">
+			<a href="/">Home</a>
+			<a href="#features">Features</a>
+			<a href="#about">About</a>
+			<a href="#" routerLink="/login">Sign In</a>
+		</nav>
+		<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+	</div>
+</header>
 
-<!-- 	<div class="row">
-		<form class="col s12 m12 l12">
-			<div class="row">
-				<div class="input-field col s6 m4 l4">
-					<input type="email" [(ngModel)]="newEmail" placeholder="Email">
+<!-- Banner -->
+<section id="banner">
+	<div>
+		<h1>Welcome to Educom</h1>
+		<p>A centralized education platform to share knowledge and to grow together</p>
+	</div>
+</section>
+
+<!-- One -->
+<section id="one" class="wrapper">
+	<div class="inner">
+
+		<h1 class="section-title" id="features">Features</h1>
+
+		<div class="flex flex-3">
+			<article>
+				<header>
+					<h3>Channel <br />categorized topic</h3>
+				</header>
+				<img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
+				<p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati officia cupiditate a
+					dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
+					reprehenderit doloremque nesciunt atque. Neque?</p>
+				<footer>
+					<!-- <a href="#" class="button special">More</a> -->
+				</footer>
+			</article>
+			<article>
+				<header>
+					<h3>Email<br /> notification announcement</h3>
+				</header>
+				<img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
+				<p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati officia cupiditate a
+					dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
+					reprehenderit doloremque nesciunt atque. Neque?</p>
+				<footer>
+					<!-- <a href="#" class="button special">More</a> -->
+				</footer>
+			</article>
+			<article>
+				<header>
+					<h3>Rooms<br /> easy discussing with friends </h3>
+				</header>
+				<img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
+				<p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati officia cupiditate a
+					dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
+					reprehenderit doloremque nesciunt atque. Neque?</p>
+				<footer>
+					<!-- <a href="#" class="button special">More</a> -->
+				</footer>
+			</article>
+		</div>
+	</div>
+</section>
+
+<!-- Two -->
+<section id="two" class="wrapper style1 special">
+	<div class="inner">
+		<header>
+			<h2 id="about">About</h2>
+			<p>Get to know about us!</p>
+		</header>
+		<div class="flex flex-4">
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione animi odit dignissimos,
+				laboriosam fugiat accusantium! Dolorum dignissimos quos, aliquam eum ipsa obcaecati exercitationem
+				nesciunt, alias ullam esse optio debitis?
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quibusdam laborum numquam sit obcaecati
+				dolorum. Neque fugiat, quis velit officia commodi quas temporibus quasi itaque, iusto nobis eius
+				consequuntur tenetur?
+			</p>
+			<!-- <div class="box person">
+				<div class="image round">
+					<img src="images/pic03.jpg" alt="Person 1" />
 				</div>
+				<h3>Magna</h3>
+				<p>Cipdum dolor</p>
 			</div>
-			<div class="row">
-				<div class="input-field col s6 m4 l4">
-					<input type="password" [(ngModel)]="newPassword" placeholder="Password">
+			<div class="box person">
+				<div class="image round">
+					<img src="images/pic04.jpg" alt="Person 2" />
 				</div>
+				<h3>Ipsum</h3>
+				<p>Vestibulum comm</p>
 			</div>
-			<div class="row">
-				<button (click)="signUp()" class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Sign Up</button>
-			</div>		
-		</form>
-	</div> -->
-</div>
-
-<div class="play-container">
-	<h2 id="about">About</h2>
-	<div style="height: 5px	; width: 25%; background-color: #fe47aa"></div>
-
-	<div class="row">
-		<div class="col s3 m3 l3">
-			<br>
-			<h3>Lorem Ipsum</h3>
-			<p>Lorep IPsum stuff stuff stuff</p>
-		</div> 
-		<div class="right-align">
-			<img src="https://memegenerator.net/img/instances/37201610/called-it.jpg" height="50%" width="45%">
-		</div> 
-	</div>
-	<br>
-	<br>
-	<br>
-	<br>
-	<h2 id="features">Features</h2>
-	<br>
-	<br>
-	<div style="height: 5px	; width: 25%; background-color: #fe47aa"></div>
-	<br>
-	<div class="custrow">
-		<div class="custcolumn">
-			<img src="https://memegenerator.net/img/instances/37201610/called-it.jpg" class="circle" width="100%">
-		</div>
-		<div class="custcolumn">
-			<img src="https://memegenerator.net/img/instances/37201610/called-it.jpg" class="circle" width="100%">
-		</div>
-		<div class="custcolumn">
-			<img src="https://memegenerator.net/img/instances/37201610/called-it.jpg" class="circle" width="100%">		
-		</div>
-	</div>
-	<div class="custrow">
-		<div class="custcolumn center-align">
-			<h3>Feature 1</h3>
-		</div>
-		<div class="custcolumn center-align">
-			<h3>Feature 2</h3>
-		</div>
-		<div class="custcolumn center-align">
-			<h3>Feature 3</h3>
-		</div>
-	</div>
-	<div class="custrow">
-		<div class="custcolumn center-align">
-			<p>Lorem Ipsum</p>
-		</div>
-		<div class="custcolumn center-align">
-			<p>Lorem Ipsum</p>
-		</div>
-		<div class="custcolumn center-align">
-			<p>Lorem Ipsum</p>
-		</div>
-	</div>
-</div>
-
-<div class="play-container1">
-
-	<h2>Contact Us</h2>
-	<div class="row">
-		<div class="col s6 m7 l8">
-			<h5><a href="#">Email</a></h5>
-			<h5><a href="#">Facebook</a></h5>
-			<h5><a href="#">Instagram</a></h5>
-			<h5><a href="#">Twitter</a></h5>
-		</div>
-		<div class="right-align">
-			<h5>Subscribe for updated information</h5>
-
-			<div class="col s6 m4 l3">
-				<input type="email" name="emailquestion" placeholder="Enter your email">
+			<div class="box person">
+				<div class="image round">
+					<img src="images/pic05.jpg" alt="Person 3" />
+				</div>
+				<h3>Tempus</h3>
+				<p>Fusce pellentes</p>
 			</div>
+			<div class="box person">
+				<div class="image round">
+					<img src="images/pic06.jpg" alt="Person 4" />
+				</div>
+				<h3>Dolore</h3>
+				<p>Praesent placer</p>
+			</div> -->
 		</div>
-		<button class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Subscribe</button>
-
 	</div>
-</div>
-</div>
+</section>
 
-<!-- <div class="play-container">
-	<p> You've click <span (click)="countClick()">this</span> {{ clickCounter }} times.</p>
-</div> -->
+<!-- Three -->
+<section id="three" class="wrapper special">
+	<div class="inner">
+		<header class="align-center">
+			<h2>Get Started</h2>
+			<p>Let's start collaborate with your friends!</p>
+			<a href="/login" class="button special">Sign In</a>
+		</header>
+	</div>
+</section>
 
+<!-- Footer -->
+<footer id="footer">
+	<div class="inner">
+		<div class="flex">
+			<div class="copyright">
+				Educom Web Application Development Class 2019/2020
+			</div>
+			<ul class="icons">
+				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
+				<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
+				<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+			</ul>
+		</div>
+	</div>
+</footer>
 
-<!-- <div class="play-container">
-	<p>
-		<input type="text" [(ngModel)]="name">
-		<br>
-		<strong>You said:</strong> {{ name }}
-	</p>
-</div>
- -->
-<!-- <div class="play-container" [style.background-color]="clickCounter > 4 ? 'yellow' : 'lightgray'"> -->
-
-<!-- style binding -->
-<!-- <div class="play-container" [ngStyle]="{
-	'background-color': clickCounter > 4 ? 'yellow' : 'lightgray',
-	'border': clickCounter > 4 ? '4px solid black' : 'none'}"> -->
-
-<!-- Class Binding -->
-<!-- <div class="play-container" [class.active]="clickCounter > 4"> -->
-<!-- <div class="play-container" [ngClass]="setClasses()">
-	<ng-template [ngIf]="clickCounter > 4" [ngIfElse]="none">
-		<p>The click counter <strong>IS GREATER</strong> than 4.</p>
-	</ng-template>
-	
-	<ng-template #none>
-		<p>The click counter is <strong>not greater</strong> than 4</p>
-	</ng-template>
-</div> -->
+<!-- Scripts -->
+<!-- <script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script> -->
