--- a/Frontend/eduka-interface/src/styles.scss
+++ b/Frontend/eduka-interface/src/styles.scss
@@ -1,9 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-$materialize-fonts-path: '~materialize-angular/fonts';
+// /* You can add global styles to this file, and also import other style files */
+// $materialize-fonts-path: '~materialize-angular/fonts';
  
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
 
-$primary: rgb(231, 238, 255);
+// $primary: rgb(231, 238, 255);
 
 html {
   scroll-behavior: smooth;
@@ -20,37 +20,37 @@ body {
     margin: 0 auto;
 }
 
-header {
-    background: $primary;
-    padding: 1em 0;
+// header {
+//     background: $primary;
+//     padding: 1em 0;
 
-    a {
-        color: 	rgb(154, 162, 176);
-        text-decoration: none;
-    }
-    a.logo {
-        font-weight: bold;
-    }
+//     a {
+//         color: 	rgb(154, 162, 176);
+//         text-decoration: none;
+//     }
+//     a.logo {
+//         font-weight: bold;
+//     }
 
-    nav {
-        float: right;
+//     nav {
+//         float: right;
 
-        ul {
-            list-style-type: none;
-            margin: 0;
-            display: flex;
+//         ul {
+//             list-style-type: none;
+//             margin: 0;
+//             display: flex;
 
-            li a {
-                padding: 1em;
+//             li a {
+//                 padding: 1em;
 
-                &:hover {
-                    background: darken($primary, 10%);
-                }
-            }
-        }
-    }
-}
+//                 &:hover {
+//                     background: darken($primary, 10%);
+//                 }
+//             }
+//         }
+//     }
+// }
 
-h1 {
-    margin-top: 2em;
-}
+// h1 {
+//     margin-top: 2em;
+// }
