fix: change title

--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 <section id="banner">
 	<div>
 		<h1>Welcome to Educom</h1>
-		<p>A centralized education platform to share knowledge and to grow together</p>
+		<p>A centralized education community platform to share knowledge and to grow together</p>
 	</div>
 </section>
 
