--- a/Frontend/eduka-interface/src/app/home/home.component.scss
+++ b/Frontend/eduka-interface/src/app/home/home.component.scss
@@ -1571,7 +1571,7 @@
 	}
 
 	body {
-		background: #fff;
+		background: #ffffff;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
