create room and join room pages

--- a/Frontend/eduka-interface/src/app/classrooms/classrooms.component.html
+++ b/Frontend/eduka-interface/src/app/classrooms/classrooms.component.html
@@ -17,7 +17,7 @@
 	</div>
 	<br><br><br>
 	<div class="center-align">
-		<button class="btn-large join-room" onclick=""><b>Join Room</b></button>
+		<button class="btn-large join-room" [routerLink]="['/joinroom']"><b>Join Room</b></button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn-large create-room" [routerLink]="['/createroom']"><b>Create Room</b></button>
 	</div>
