--- a/Frontend/eduka-interface/src/app/login/login.component.html
+++ b/Frontend/eduka-interface/src/app/login/login.component.html
@@ -1,19 +1,23 @@
 <div class="container">
-	<div class="login-container">
-		<h1>Login</h1>
-		<div class="row">	
-			<div class="input-field col s6 m4 l4">
-				<input type="email" name="email" placeholder="Email">
-			</div>
-		</div>
-		<div class="row">	
-			<div class="input-field col s6 m4 l4">
-				<input type="password" name="password" placeholder="Password">
-			</div>
-		</div>
-		<div class="row">
-			<button class="btn-large waves-effect eduka-pink" type="submit" name="signIn">Login</button>
-		</div>	
-		<h6>Don't have an account? </h6><h6><a [routerLink]="['/signup']"> <u>Sign up here</u> </a></h6>
-	</div>
+  <div class="login-container">
+    <h1>Login</h1>
+
+
+
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <input type="email" name="email" placeholder="Email" [(ngModel)]="email">
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <input type="password" name="password" placeholder="Password" [(ngModel)]="password">
+      </div>
+    </div>
+    <div class="row">
+      <button class="btn-large waves-effect eduka-pink" type="submit" name="signIn" (click)="doLogin()">Login</button>
+    </div>
+    <h6>Don't have an account? </h6><h6><a [routerLink]="['/signup']"> <u>Sign up here</u> </a></h6>
+  </div>
 </div>
+Response: {{response|json}}
