--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -1,148 +1,155 @@
 <!-- Header -->
 <header id="header">
-	<div class="inner">
-		<a href="#" class="logo" routerLink="/">Educom</a>
-		<nav id="nav">
-			<a href="/">Home</a>
-			<a href="#features">Features</a>
-			<a href="#about">About</a>
-			<a href="#" routerLink="/login">Sign In</a>
-		</nav>
-		<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-	</div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="inner">
+        <a href="#" class="logo" routerLink="/">Educom</a>
+        <nav id="nav" class="navigation">
+          <a href="/">Home</a>
+          <a href="#features">Features</a>
+          <a href="#about">About</a>
+          <a href="#" routerLink="/login">Sign In</a>
+        </nav>
+        <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+      </div>
+    </div>
+  </div>
 </header>
 
 <!-- Banner -->
 <section id="banner">
-	<div>
-		<h1>Welcome to Educom</h1>
-		<p>A centralized education community platform to share knowledge and to grow together</p>
-	</div>
+  <div>
+    <h1><i [style.color]="'#5385c1'">Welcome</i> to Educom</h1>
+    <p >A centralized education community platform to share knowledge and to grow together</p>
+  </div>
 </section>
 
 <!-- One -->
 <section id="one" class="wrapper">
-	<div class="inner">
+  <div class="inner">
 
-		<h1 class="section-title" id="features">Features</h1>
+    <h1 class="section-title" id="features">Features</h1>
 
-		<div class="flex flex-3">
-			<article>
-				<header>
-					<h3>Channel <br />categorized topic</h3>
-				</header>
-				<img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
-				<p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati officia cupiditate a
-					dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
-					reprehenderit doloremque nesciunt atque. Neque?</p>
-				<footer>
-					<!-- <a href="#" class="button special">More</a> -->
-				</footer>
-			</article>
-			<article>
-				<header>
-					<h3>Email<br /> notification announcement</h3>
-				</header>
-				<img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
-				<p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati officia cupiditate a
-					dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
-					reprehenderit doloremque nesciunt atque. Neque?</p>
-				<footer>
-					<!-- <a href="#" class="button special">More</a> -->
-				</footer>
-			</article>
-			<article>
-				<header>
-					<h3>Rooms<br /> easy discussing with friends </h3>
-				</header>
-				<img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
-				<p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati officia cupiditate a
-					dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
-					reprehenderit doloremque nesciunt atque. Neque?</p>
-				<footer>
-					<!-- <a href="#" class="button special">More</a> -->
-				</footer>
-			</article>
-		</div>
-	</div>
+    <div class="flex flex-3">
+      <article>
+        <header>
+          <h3>Channel <br/>categorized topic</h3>
+        </header>
+        <img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
+        <p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          obcaecati officia cupiditate a
+          dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
+          reprehenderit doloremque nesciunt atque. Neque?</p>
+        <footer>
+          <!-- <a href="#" class="button special">More</a> -->
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h3>Email<br/> notification announcement</h3>
+        </header>
+        <img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
+        <p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          obcaecati officia cupiditate a
+          dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
+          reprehenderit doloremque nesciunt atque. Neque?</p>
+        <footer>
+          <!-- <a href="#" class="button special">More</a> -->
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h3>Rooms<br/> easy discussing with friends </h3>
+        </header>
+        <img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
+        <p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          obcaecati officia cupiditate a
+          dolorem placeat nisi consectetur laudantium esse minus facilis et rem, ipsa, voluptatibus
+          reprehenderit doloremque nesciunt atque. Neque?</p>
+        <footer>
+          <!-- <a href="#" class="button special">More</a> -->
+        </footer>
+      </article>
+    </div>
+  </div>
 </section>
 
 <!-- Two -->
 <section id="two" class="wrapper style1 special">
-	<div class="inner">
-		<header>
-			<h2 id="about">About</h2>
-			<p>Get to know about us!</p>
-		</header>
-		<div class="flex flex-4">
+  <div class="inner">
+    <header>
+      <h2 id="about">About</h2>
+      <p>Get to know about us!</p>
+    </header>
+    <div class="flex flex-4">
 
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione animi odit dignissimos,
-				laboriosam fugiat accusantium! Dolorum dignissimos quos, aliquam eum ipsa obcaecati exercitationem
-				nesciunt, alias ullam esse optio debitis?
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quibusdam laborum numquam sit obcaecati
-				dolorum. Neque fugiat, quis velit officia commodi quas temporibus quasi itaque, iusto nobis eius
-				consequuntur tenetur?
-			</p>
-			<!-- <div class="box person">
-				<div class="image round">
-					<img src="images/pic03.jpg" alt="Person 1" />
-				</div>
-				<h3>Magna</h3>
-				<p>Cipdum dolor</p>
-			</div>
-			<div class="box person">
-				<div class="image round">
-					<img src="images/pic04.jpg" alt="Person 2" />
-				</div>
-				<h3>Ipsum</h3>
-				<p>Vestibulum comm</p>
-			</div>
-			<div class="box person">
-				<div class="image round">
-					<img src="images/pic05.jpg" alt="Person 3" />
-				</div>
-				<h3>Tempus</h3>
-				<p>Fusce pellentes</p>
-			</div>
-			<div class="box person">
-				<div class="image round">
-					<img src="images/pic06.jpg" alt="Person 4" />
-				</div>
-				<h3>Dolore</h3>
-				<p>Praesent placer</p>
-			</div> -->
-		</div>
-	</div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione animi odit dignissimos,
+        laboriosam fugiat accusantium! Dolorum dignissimos quos, aliquam eum ipsa obcaecati exercitationem
+        nesciunt, alias ullam esse optio debitis?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quibusdam laborum numquam sit obcaecati
+        dolorum. Neque fugiat, quis velit officia commodi quas temporibus quasi itaque, iusto nobis eius
+        consequuntur tenetur?
+      </p>
+      <!-- <div class="box person">
+        <div class="image round">
+          <img src="images/pic03.jpg" alt="Person 1" />
+        </div>
+        <h3>Magna</h3>
+        <p>Cipdum dolor</p>
+      </div>
+      <div class="box person">
+        <div class="image round">
+          <img src="images/pic04.jpg" alt="Person 2" />
+        </div>
+        <h3>Ipsum</h3>
+        <p>Vestibulum comm</p>
+      </div>
+      <div class="box person">
+        <div class="image round">
+          <img src="images/pic05.jpg" alt="Person 3" />
+        </div>
+        <h3>Tempus</h3>
+        <p>Fusce pellentes</p>
+      </div>
+      <div class="box person">
+        <div class="image round">
+          <img src="images/pic06.jpg" alt="Person 4" />
+        </div>
+        <h3>Dolore</h3>
+        <p>Praesent placer</p>
+      </div> -->
+    </div>
+  </div>
 </section>
 
 <!-- Three -->
 <section id="three" class="wrapper special">
-	<div class="inner">
-		<header class="align-center">
-			<h2>Get Started</h2>
-			<p>Let's start collaborate with your friends!</p>
-			<a href="/login" class="button special">Sign In</a>
-		</header>
-	</div>
+  <div class="inner">
+    <header class="align-center">
+      <h2>Get Started</h2>
+      <p>Let's start collaborate with your friends!</p>
+      <a href="/login" class="button special">Log In</a>
+    </header>
+  </div>
 </section>
 
 <!-- Footer -->
 <footer id="footer">
-	<div class="inner">
-		<div class="flex">
-			<div class="copyright">
-				Educom Web Application Development Class 2019/2020
-			</div>
-			<ul class="icons">
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-				<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-				<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-			</ul>
-		</div>
-	</div>
+  <div class="inner">
+    <div class="flex">
+      <div class="copyright">
+        Educom Web Application Development Class 2019/2020
+      </div>
+      <ul class="icons">
+        <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
+        <li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
+        <li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+      </ul>
+    </div>
+  </div>
 </footer>
 
 <!-- Scripts -->
