--- a/Frontend/eduka-interface/src/app/login/login.component.html
+++ b/Frontend/eduka-interface/src/app/login/login.component.html
@@ -1,23 +1,34 @@
-<div class="container">
-  <div class="login-container">
-    <h1>Login</h1>
+<div class="container-fluid login-page">
+  <div class="row">
+    <div class="col-md-6 left-side">
+      <div class="login-container">
+        <h1>Login</h1>
 
-
-
-    <div class="row">
-      <div class="input-field col s6 m4 l4">
-        <input type="email" name="email" placeholder="Email" [(ngModel)]="email">
+        <div class="alert alert-danger" role="alert" *ngIf="errorMsg">
+          {{errorMsg}}
+        </div>
+        <div class="row">
+          <div class="input-field col s6 m4 l4">
+            <input type="email" name="email" placeholder="Email" [(ngModel)]="email">
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s6 m4 l4">
+            <input type="password" name="password" placeholder="Password" [(ngModel)]="password">
+          </div>
+        </div>
+        <div class="row btn-login-wrapper">
+          <button class="waves-effect eduka-pink btn-login" type="submit" name="signIn" (click)="doLogin()">Login
+          </button>
+        </div>
+        <br>
+        <h6>Don't have an account? </h6><h6><a [routerLink]="['/signup']"> <u>Sign up here</u> </a></h6>
       </div>
     </div>
-    <div class="row">
-      <div class="input-field col s6 m4 l4">
-        <input type="password" name="password" placeholder="Password" [(ngModel)]="password">
-      </div>
+
+    <div class="col-md-6 right-side">
+
     </div>
-    <div class="row">
-      <button class="btn-large waves-effect eduka-pink" type="submit" name="signIn" (click)="doLogin()">Login</button>
-    </div>
-    <h6>Don't have an account? </h6><h6><a [routerLink]="['/signup']"> <u>Sign up here</u> </a></h6>
   </div>
 </div>
 Response: {{response|json}}
