--- a/Frontend/eduka-interface/src/app/signup/signup.component.html
+++ b/Frontend/eduka-interface/src/app/signup/signup.component.html
@@ -1,40 +1,47 @@
 <div class="container">
-	<div class="signup-container">
-		<h1>Sign Up</h1>
-		<div class="row">	
-			<div class="input-field col s6 m4 l4">
-				<input type="text" [(ngModel)]="name" placeholder="Full Name">
-			</div>
-		</div>
-		<div class="row">	
-			<div class="input-field col s6 m4 l4">
-				<input type="email" [(ngModel)]="email" placeholder="Email">
-			</div>
-		</div>
-		<div class="row">	
-			<div class="input-field col s6 m4 l4">
-				<input type="password" [(ngModel)]="password" placeholder="Password">
-			</div>
-		</div>
-		<div class="row">	
-			<div class="input-field col s6 m4 l4">
-				<input type="password" [(ngModel)]="confirm_password" placeholder="Confirm Password">
-			</div>
-		</div>
-		<div class="row">
-		  <div class="input-field col s6 m4 l4">
-		    <select class="browser-default">
-		      <option value="" disabled selected>--Select Gender--</option>
-		      <option value="1">Male</option>
-		      <option value="2">Female</option>
-		      <option value="3">Other</option>
-		    </select>
-<!-- 		    <label>Gender</label>
- -->		  </div>
-	  	</div>
-		<div class="row">
-			<button (click)="signUp()" class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Sign Up</button>
-		</div>	
+  <div class="signup-container">
+    <h1>Sign Up</h1>
+    <br>
+    <div class="alert alert-danger" role="alert" *ngIf="errorMsg">
+      {{errorMsg}}
+    </div>
 
-	</div>
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <input type="text" [(ngModel)]="name" placeholder="Full Name">
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <input type="email" [(ngModel)]="email" placeholder="Email">
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <input type="password" [(ngModel)]="password" placeholder="Password">
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <input type="password" [(ngModel)]="confirmPassword" placeholder="Confirm Password">
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6 m4 l4">
+        <select class="browser-default" [(ngModel)]="gender">
+          <option value="" disabled selected>--Select Gender--</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+          <option value="Prefer not to say">Prefer not to say</option>
+        </select>
+        <!-- 		    <label>Gender</label>
+         -->      </div>
+    </div>
+    <div class="row">
+      <button (click)="signUp()" class="btn-large waves-effect eduka-pink" type="submit" name="signUp">Sign Up</button>
+    </div>
+
+  </div>
 </div>
+
+{{ response |  json}}
