separate footer component

--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -20,7 +20,7 @@
 <section id="banner">
   <div>
     <h1><i [style.color]="'#5385c1'">Welcome</i> to Educom</h1>
-    <p >A centralized education community platform to share knowledge and to grow together</p>
+    <p>A centralized education community platform to share knowledge and to grow together</p>
   </div>
 </section>
 
@@ -134,23 +134,7 @@
   </div>
 </section>
 
-<!-- Footer -->
-<footer id="footer">
-  <div class="inner">
-    <div class="flex">
-      <div class="copyright">
-        Educom Web Application Development Class 2019/2020
-      </div>
-      <ul class="icons">
-        <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-        <li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-        <li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-      </ul>
-    </div>
-  </div>
-</footer>
+<app-footer></app-footer>
 
 <!-- Scripts -->
 <!-- <script src="assets/js/jquery.min.js"></script>
