--- a/Frontend/eduka-interface/src/app/login/login.component.html
+++ b/Frontend/eduka-interface/src/app/login/login.component.html
@@ -4,6 +4,7 @@
       <div class="login-container">
         <h1>Login</h1>
 
+        <br>
         <div class="alert alert-danger" role="alert" *ngIf="errorMsg">
           {{errorMsg}}
         </div>
@@ -31,4 +32,5 @@
     </div>
   </div>
 </div>
-Response: {{response|json}}
+<!--Response: {{response|json}}-->
+<app-footer></app-footer>
