--- a/Frontend/eduka-interface/src/app/classrooms/classrooms.component.scss
+++ b/Frontend/eduka-interface/src/app/classrooms/classrooms.component.scss
@@ -1,19 +1,29 @@
-nav {
-	a {
-		color: black;
-	}
-	ul {
-		li {
-		 	a { 
-		 		color: black;
-		 	}
-		}
-	}
-}
+//nav {
+//	a {
+//		color: black;
+//	}
+//	ul {
+//		li {
+//		 	a {
+//		 		color: black;
+//		 	}
+//		}
+//	}
+//}
 
 
 .room-manager-container {
-	background-color: #f3f4f9;
+	//background-color: #f3f4f9;
+  padding: 12em 0 10em 0;
+  background-image: url('../../assets/homepage/bg-image8.jpg');
+  background-size: cover;
+  background-position: top;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  border-top: 0.5em solid #5385c1;
+  width: 100%;
+  height: 100vh;
 }
 
 .select-room {
@@ -34,27 +44,27 @@ nav {
     h4 {
     	color: black;
     	font-size: 1.5vw;
-    	margin-left: 0.5em;	
+    	margin-left: 0.5em;
     }
 }
 
-.my-classrooms-container::-webkit-scrollbar { 
+.my-classrooms-container::-webkit-scrollbar {
   	width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
 .rmc-tc {
 	color: #575e68;
@@ -62,7 +72,7 @@ nav {
 
 .eduka-pink {
     background-color: #fe47aa;
-} 
+}
 
 
 .join-room {
@@ -85,4 +95,136 @@ nav {
 	height: 5px;
 	width: 25%;
     background-color: #fe47aa;
+}
+
+
+.navigation{
+  background-color: transparent;
+  border: 0px;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  box-shadow: none;
+}
+
+/* Header */
+
+.subpage {
+  padding-top: 44px;
+}
+
+.subpage #header {
+  background: #5385c1;
+  top: 0;
+  height: 44px;
+  line-height: 44px;
+  position: fixed;
+}
+
+#header {
+  color: #d4e0ef;
+  cursor: default;
+  height: 3.25em;
+  left: 0;
+  line-height: 3.25em;
+  position: absolute;
+  text-align: right;
+  //top: 4em;
+  width: 100%;
+  z-index: 10001;
+  padding: 15px;
+}
+
+#header .inner {
+  margin: 0 auto;
+  position: relative;
+}
+
+#header .logo {
+  color: #ffffff;
+  display: inline-block;
+  font-weight: 600;
+  height: inherit;
+  left: 0;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  font-size: 2em;
+}
+
+#header a {
+  -moz-transition: color 0.2s ease-in-out;
+  -webkit-transition: color 0.2s ease-in-out;
+  -ms-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+  display: inline-block;
+  padding: 0 0.75em;
+  color: inherit;
+  text-decoration: none;
+  font-size: .8em;
+}
+
+#header a:hover {
+  color: #ffffff;
+}
+
+#header a:last-child {
+  padding-right: 0;
+}
+
+#header a.navPanelToggle {
+  display: none;
+  text-decoration: none;
+  height: 4em;
+  width: 4em;
+  z-index: 10003;
+}
+
+#header a.navPanelToggle .fa {
+  font-size: 1.25em;
+}
+
+@media screen and (max-width: 980px) {
+
+  #header a.navPanelToggle {
+    display: inline-block;
+  }
+
+}
+
+@media screen and (max-width: 736px) {
+
+  #header a {
+    padding: 0 0.5em;
+  }
+
+}
+
+@media screen and (max-width: 980px) {
+
+  #header {
+    top: 3em;
+    height: 44px;
+    line-height: 44px;
+  }
+
+}
+
+@media screen and (max-width: 736px) {
+
+  #header {
+    top: 2em;
+  }
+
+}
+
+@media screen and (max-width: 480px) {
+
+  #header {
+    top: 1em;
+    min-width: 320px;
+  }
+
 }
