--- a/Frontend/eduka-interface/src/app/login/login.component.html
+++ b/Frontend/eduka-interface/src/app/login/login.component.html
@@ -8,6 +8,10 @@
         <div class="alert alert-danger" role="alert" *ngIf="errorMsg">
           {{errorMsg}}
         </div>
+        <div class="alert alert-success" role="alert" *ngIf="message">
+          {{message}}
+        </div>
+
         <div class="row">
           <div class="input-field col s6 m4 l4">
             <input type="email" name="email" placeholder="Email" [(ngModel)]="email">
