--- a/Frontend/eduka-interface/src/app/signup/signup.component.scss
+++ b/Frontend/eduka-interface/src/app/signup/signup.component.scss
@@ -10,4 +10,43 @@
 
 .eduka-pink {
     background-color: #fe47aa;
-} 
+}
+
+.left-side{
+
+  .btn-login-wrapper{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .combobox-gender{
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .btn-signup{
+    width: 120%;
+    height: 45px;
+    text-align: center;
+    align-items: center;
+    color: white;
+    border: 0px solid white;
+    margin-right: -25px;
+    //margin-left: 15px;
+  }
+}
+
+.right-side {
+  //padding: 12em 0 10em 0;
+  background-image: url('../../assets/homepage/bg-image8.jpg');
+  background-size: cover;
+  background-position: top;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  //border-top: 0.5em solid #5385c1;
+  width: 100%;
+  height: 170vh;
+}
