--- a/Frontend/eduka-interface/src/app/classrooms/classrooms.component.scss
+++ b/Frontend/eduka-interface/src/app/classrooms/classrooms.component.scss
@@ -13,9 +13,9 @@
 
 
 .room-manager-container {
-	//background-color: #f3f4f9;
+  //background-color: #f3f4f9;
   padding: 12em 0 10em 0;
-  background-image: url('../../assets/homepage/bg-image8.jpg');
+  background-image: url('../../assets/classrooms/bg-image.jpg');
   background-size: cover;
   background-position: top;
   background-attachment: fixed;
@@ -24,32 +24,68 @@
   border-top: 0.5em solid #5385c1;
   width: 100%;
   height: 100vh;
+
+}
+
+//.room-manager-container div{
+//  position: relative;
+//  top: 0px;
+//  left: 0px;
+//  z-index: -100;
+//  height: 100vh;
+//  width: 100%;
+//  background-color: rgba(0, 0, 0, 0.5);
+//}
+
+.darken-pseudo {
+  position: relative;
+}
+
+.darken-pseudo:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.darken-with-text div {
+  margin-top: -15px;
+  //font-size: 2em;
+  //text-align: center;
+  color: white;
+  //padding-top: 50px;
+  position: relative;
+  z-index: 1;
 }
 
 .select-room {
 
-    img {
-    	display: inline-block;
-    }
+  img {
+    display: inline-block;
+  }
 }
 
 
 .my-classrooms-container {
-	padding: 3em;
-	background-color: white;
-	height: 600px;
-	overflow-x: scroll;
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
-    h4 {
-    	color: black;
-    	font-size: 1.5vw;
-    	margin-left: 0.5em;
-    }
+  padding: 3em;
+  background-color: white;
+  height: 600px;
+  overflow-x: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+  h4 {
+    color: black;
+    font-size: 1.5vw;
+    margin-left: 0.5em;
+  }
 }
 
 .my-classrooms-container::-webkit-scrollbar {
-  	width: 10px;
+  width: 10px;
 }
 
 /* Track */
@@ -66,39 +102,41 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
 .rmc-tc {
-	color: #575e68;
+  //color: #575e68;
+  color: #a2aec1;
 }
 
 .eduka-pink {
-    background-color: #fe47aa;
+  background-color: #fe47aa;
 }
 
 
 .join-room {
-	background-color: white;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #fe47aa;
-	color: #fe47aa;
+  background-color: white;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #fe47aa;
+  color: #fe47aa;
 }
 
 .create-room {
-	background-color: #fe47aa;
-	border-width: 1px;
-	border-style: solid;
-	border-color: white;
-	color: white;
+  background-color: #fe47aa;
+  border-width: 1px;
+  border-style: solid;
+  border-color: white;
+  color: white;
 }
 
 .pink-line {
-	height: 5px;
-	width: 25%;
-    background-color: #fe47aa;
+  height: 3px;
+  width: 85px;
+  background-color: #fe47aa;
 }
 
 
-.navigation{
+.navigation {
   background-color: transparent;
   border: 0px;
   width: 100%;
@@ -227,4 +265,9 @@
     min-width: 320px;
   }
 
+}
+
+
+.room-heading{
+  color: black;
 }
