--- a/Frontend/eduka-interface/src/app/joinroom/joinroom.component.html
+++ b/Frontend/eduka-interface/src/app/joinroom/joinroom.component.html
@@ -4,7 +4,7 @@
 		<hr>
 		<div class="row">	
 			<div class="input-field col s6 m4 l4">
-				<input type="text" name="roomCode" placeholder="Room Code">
+				<input type="text" [(ngModel)]="roomCode" placeholder="Room Code">
 			</div>
 		</div>
 
