--- a/Frontend/eduka-interface/src/app/classrooms/classrooms.component.html
+++ b/Frontend/eduka-interface/src/app/classrooms/classrooms.component.html
@@ -55,15 +55,19 @@
 </div>
 <div class="my-classrooms-container">
   <div class="select-room" scrollX="true" *ngFor="let room of rooms">
-    <h4 class="name"> {{room.name}} </h4>
     <img class="room-item" src="../../assets/homepage/bg-image8.jpg" alt="{{ room.name }}">
-    <p><i>{{ room.description }}</i></p>
+    <h4 class="name"> {{room.name}} </h4>
+    <p class="description"><i>{{ room.description }}</i></p>
   </div>
 </div>
-  <div class="heading-container">
+<div class="heading-container">
   <h2 class="room-heading"><b>Rooms shared with You</b></h2>
-  <div class="pink-line"></div>  
+  <div class="pink-line"></div>
 </div>
 <div class="my-classrooms-container">
-
+  <div class="select-room" scrollX="true" *ngFor="let room of sharedRooms">
+    <img class="room-item" src="../../assets/homepage/bg-image8.jpg" alt="{{ room.name }}">
+    <h4 class="name"> {{room.name}} </h4>
+    <p class="description"><i>{{ room.description }}</i></p>
+  </div>
 </div>
